[Restful practice][Oliver]refactor:change List<CompanyResponse> to CompanyResponse